--- a/goon/browserassets/css/browserOutput.css
+++ b/goon/browserassets/css/browserOutput.css
@@ -271,6 +271,7 @@ em						{font-style: normal;	font-weight: bold;}
 .yell					{					font-weight: bold;}
 .siliconsay				{font-family: 'Courier New', Courier, monospace;}
 .deadsay				{color: #5c00e6;}
+.radio					{color: #408010;}
 .spyradio				{color: #776f96;}
 .deptradio				{color: #993399;}
 .comradio				{color: #204090;}
@@ -451,7 +452,6 @@ h1.alert, h2.alert			{color: #000000;}
 .adminticketalt {color: #014c8a; font-weight: bold}
 
 /* Empty spans */
-.radio,
 .emote {
 }
 
